# rawxio

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  deploy.yml  publish.yml  ruff.yml  tests.yml
psseio/: data_model.py  psse.py  utils.py
rawxio/: rawx.py  utils.py
src/rawxio/: data_model.py  rawx.py
tests/: test_io.py
tests/data/: minimal_rawx.json
